# api/handlers/v1/order.go
@@ -1126,3 +1126,52 @@ func (h *handlerV1) GetBranchOrders(c *gin.Context) {
 
 	c.JSON(http.StatusOK, model)
 }
+
+
+// @Security ApiKeyAuth
+// @Router /v1/branch/:shipper_id/orders/all [get]
+// @Summary Get All Branch Orders
+// @Description API for getting all branch orders
+// @Tags order
+// @Accept  json
+// @Produce  json
+// @Param shipper_id path string true "shipper_id"
+// @Success 200 {object} models.GetAllBranchOrdersModel
+// @Failure 404 {object} models.ResponseError
+// @Failure 500 {object} models.ResponseError
+func (h *handlerV1) GetAllBranchOrders(c *gin.Context) {
+	var (
+		jspbMarshal jsonpb.Marshaler
+		// orderID     string
+		// userInfo    models.UserInfo
+		// //model models.GetOrderModel
+	)
+
+	jspbMarshal.OrigName = true
+	jspbMarshal.EmitDefaults = true
+
+	shipperID := c.Param("shipper_id")
+
+	orders, err := h.grpcClient.OrderService().GetAllBranchOrders(context.Background(), &pbo.GetAllBranchOrdersRequest{
+		ShipperId: shipperID,
+	})
+
+	if handleGrpcErrWithMessage(c, h.log, err, "error while getting orders") {
+		return
+	}
+
+	js, err := jspbMarshal.MarshalToString(orders)
+
+	if handleGrpcErrWithMessage(c, h.log, err, "error while marshalling") {
+		return
+	}
+	//
+	//err = json.Unmarshal([]byte(js), &model)
+	//
+	//if handleInternalWithMessage(c, h.log, err, "error while unmarshal to json") {
+	//	return
+	//}
+
+	c.Header("Content-Type", "application/json")
+	c.String(http.StatusOK, js)
+}
